<resources>
    <string name="app_name">ChallengeRoom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_item">Add New Item</string>
    <string name="tittle">Enter Tittle</string>
    <string name="enter_description">Enter Description</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="account_haved">Do you he an account?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register_now">Register Now</string>
    <string name="register">Register</string>
    <string name="joined_us_before">Joined us before ?</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>


<!--    Toast-->
    <string name="success">Success</string>
    <string name="toast_success_add_data">Successfully added data</string>
    <string name="error">Error</string>
    <string name="toast_error_add_data">Failed Added Data</string>
    <string name="toast_success_update_data">Successfully updated data</string>
    <string name="toast_error_update_data">Failed updated data</string>
    <string name="toast_success_delete_data">Successfully deleted data</string>
    <string name="toast_error_delete_data">Failed deleted data</string>
    <string name="toast_info">Info</string>
    <string name="toast_info_message">No data yet</string>


<!--    Alert-->

    <string name="alert_warning_delete">Warning</string>
    <string name="alert_success_delete">Success</string>
    <string name="alert_error_delete">Error</string>
    <string name="alert_message_delete_data">are you sure you want to delete this record ? the note will be deleted permanently</string>
    <string name="alert_update_tittle">Update Item</string>
    <string name="alert_add_tittle">Add Item</string>
    <string name="alert_cancel">"Cancel</string>
    <string name="alert_delete">Delete</string>
    <string name="alert_logout">Logout</string>
    <string name="alert_logout_message">Are you sure you want to log out?</string>


</resources>